frontend/src/entities/user/ui/ProfileTabsNavigation/ProfileTabsNavigation.module.css
.section {
  position: relative;
  width: 100%;
  padding: 0;
  margin: 0;
}

.underline {
  position: absolute;
  bottom: 0.75px;
  left: 0;
  right: 0;
  z-index: -1;
  height: 1.5px;
  background-color: var(--fd-border-default);
  pointer-events: none;
}

.tabsList {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: var(--fd-space-30);
  position: relative;
  min-width: 100%;
  overflow-x: auto;
  scrollbar-width: none;
}
.tabsList::-webkit-scrollbar {
  display: none;
}

.link {
  position: relative;
  text-decoration: none !important;
  display: inline-flex;
  color: var(--fd-text-muted);
  transition: color 0.3s ease;
  cursor: pointer;
  margin: 0;
}

.link:hover {
  color: var(--fd-text-primary);
}

.link:hover .labelText::after {
  opacity: 1;
}

li.active {
  a {
    color: var(--fd-text-primary) !important;
  }

  &::after {
    content: "";
    display: block;
    height: 3px;
    width: 100%;
    background-color: var(--fd-text-primary);
  }
}

.labelText {
  position: relative;
  display: inline-block;
  white-space: nowrap;
  font-family: var(--fd-font-family-base);
  font-weight: var(--fd-font-weight-extrabold);
  font-size: 18px;
  line-height: 24px;
  letter-spacing: var(--fd-letter-spacing-tight);
  text-transform: uppercase;
}

.active .labelText::after {
  opacity: 1;
}

.bottomLine {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: var(--fd-border-width-hairline);
  pointer-events: none;
}

@media (min-width: 768px) {
  .tabsList {
    gap: var(--fd-space-40);
  }

  .labelText {
    font-size: 20px;
  }
}

@media (min-width: 1280px) {
  .tabsList {
    gap: var(--fd-space-40);
  }
}

